--- a/dune
+++ b/dune
@@ -25,6 +25,5 @@
                    -open Tezos_client_commands
                    -open Tezos_client_base_unix
                    -open Tezos_micheline
-                   -linkall
-                   -w -32))
+                   -linkall))
 )
